Bug 132845 - Writer jumps back to the page initial visited with navigator/page number
Summary: Writer jumps back to the page initial visited with navigator/page number
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords: bibisected, bisected, needUITest, regression
Depends on:
Blocks:
 
Reported: 2020-05-08 15:23 UTC by Telesto
Modified: 2020-06-16 15:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Bibisect log (2.74 KB, text/plain)
2020-05-08 19:03 UTC, Telesto
Details
Example file (30.97 KB, application/vnd.oasis.opendocument.text)
2020-05-19 07:31 UTC, Telesto
Details
Screencast (21.30 MB, video/mp4)
2020-06-07 20:41 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-05-08 15:23:10 UTC
Description:
Writer jumps back to the page initial visited with navigator/page number

Steps to Reproduce:
1. Open the attached file
2. Sidebar -> Navigator deck
3. Enter 5 page & press enter
4. Scroll up & click somewhere on a page to edit.. 

Actual Results:
Jumps back to page 5

Expected Results:
Shouldn't happen


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 97a2c1fc5e376c0c00968f17a0392c6d3a5ed565
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: threaded
Comment 1 Telesto 2020-05-08 15:25:24 UTC
Not in
Versie: 6.4.0.2 (x86)
Build ID: 08d19fecdc7a2298d051e19cfdb7c35544855fc3
CPU-threads: 4; Besturingssysteem: Windows 6.3 Build 9600; UI-render: GL; VCL: win; 
Locale: nl-NL (nl_NL); UI-taal: nl-NL
Calc: CL
Comment 2 Telesto 2020-05-08 19:03:24 UTC
Created attachment 160549 [details]
Bibisect log

Bisected to
author	Caolán McNamara <caolanm@redhat.com>	2020-02-16 16:28:33 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-02-16 20:17:26 +0100
commit 83c0b9940057eb734a247a5f44386452a6a1a9e9 (patch)
tree 0997b8f5063b47454c4db0f3488eaa79a71c4227
parent 475d6c193f043d796825bdde3944f006491a1794 (diff)
weld ExcludeCheckBox Item Window
Comment 3 Telesto 2020-05-19 07:31:37 UTC
Created attachment 160991 [details]
Example file
Comment 4 Telesto 2020-05-19 07:32:18 UTC
@Xisco
Bibisected already.. only in need for a conformation.
Comment 5 Durgapriyanka 2020-05-20 21:10:02 UTC
Thank you for reporting the bug. I can not reproduce this in

Version: 6.4.0.0.alpha1+ (x86)
Build ID: ec7374ff84c71edfbb30d6e4dc5b486b6df7107f
CPU threads: 2; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-11-10_21:37:30
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
	

and in

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 6 Xisco Faulí 2020-05-22 10:44:58 UTC
I can't reproduce it in

Version: 7.0.0.0.alpha1+
Build ID: 8209c2569f5726f9ed29f75d30efdccb94f98fe5
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

is the navigator docked ? Please, record a screencast
Comment 7 Telesto 2020-06-07 20:41:10 UTC
Created attachment 161747 [details]
Screencast
Comment 8 Dieter 2020-06-10 06:59:58 UTC
Iconfirm it with

Version: 7.0.0.0.beta1 (x64)
Build ID: 94f789cbb33335b4a511c319542c7bdc31ff3b3c
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

and it's not present in

Version: 6.4.4.2 (x64)
Build-ID: 3d775be2011f3886db32dfd395a6a6d1ca2630ff
CPU-Threads: 4; BS: Windows 10.0 Build 18363; UI-Render: GL; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded
Comment 9 Telesto 2020-06-10 07:42:32 UTC
Adding CC: to Caolán McNamara
Comment 10 Caolán McNamara 2020-06-10 10:56:14 UTC
the spinbutton has focus, on the click into the document it loses focus, which fires a value-changed, setting the page to its current value.
Comment 11 Commit Notification 2020-06-10 16:32:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/49ce4bf15c1769b7427dd4d828e586c1e896f928

tdf#132845 discard pending page change if user clicks in document

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2020-06-10 19:42:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/a4055b5317e42773e8510422826737462290f42f

tdf#132845 discard pending page change if user clicks in document

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Xisco Faulí 2020-06-16 15:07:45 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 11d21b3c1f7754b5d13ae9ea88da562ec74366ff
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!