tdf#132845 discard pending page change if user clicks in document

Change-Id: Icce91c9afac143190dc5c7d823d745dc2434c1a1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96013
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>